--- a/program/templates/event_page.html
+++ b/program/templates/event_page.html
@@ -141,19 +141,19 @@
         </section>
         <!---->
         <section style="background-color: #e7effd;">
-          <div class="container my-5 py-5 text-dark">
+          <div class="container py-5 text-dark">
             {% for comment in comments %}
             <div class="row d-flex justify-content-center">
               <div class="col-md-11 col-lg-9 col-xl-7">
                 <div class="d-flex flex-start mb-4">
                   <img class="rounded-circle shadow-1-strong me-3"
-                    src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20({{ comment.author_id }}).webp" alt="avatar"
+                    src="https://mdbootstrap.com/img/Photos/Avatars/img%20({{ comment.author_of_comment.id }}).jpg" alt="avatar"
                     width="65" height="65" />
                   <div class="card w-100">
                     <div class="card-body p-4">
                       <div class="">
-                        <h5>{{ comment.author_id }} -- here will be username instead userID</h5>
-                        <p class="text-primary small">{{ comment.date_posted }}</p>
+                        <h5>{{ comment.author_of_comment.username }}</h5>
+                        <p class="text-primary small">{{ comment.date_posted.strftime("%d-%m-%Y, %H:%M") }}</p>
                         <p>
                           {{ comment.content }}
                         </p>
