--- a/program/templates/login.html
+++ b/program/templates/login.html
@@ -55,20 +55,20 @@
             <!-- Email input -->
             <div class="form-outline mb-4">
               {{ form.username(class="form-control", id="loginName") }}
-              <label class="form-label" for="form3Example3">Username</label>
+              <label class="form-label" for="loginName">Username</label>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-3">
               {{ form.password(class="form-control", type="password", id="loginPassword") }}
-              <label class="form-label" for="form3Example4">Password</label>
+              <label class="form-label" for="loginPassword">Password</label>
             </div>
 
             <div class="d-flex justify-content-between align-items-center">
               <!-- Checkbox -->
               <div class="form-check mb-0">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                <label class="form-check-label" for="form2Example3">
+                <input class="form-check-input me-2" type="checkbox" value="" id="rememberButton" />
+                <label class="form-check-label" for="rememberButton">
                   Remember me
                 </label>
               </div>
