--- a/program/templates/base.html
+++ b/program/templates/base.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Events.com</title>
   <!-- Icon -->
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1378/1378644.png" type="image/x-icon" />
+  <link rel="icon" href="../static/icon.png" type="image/x-icon" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
   <!-- Google Fonts Roboto -->
