--- a/program/templates/base.html
+++ b/program/templates/base.html
@@ -46,7 +46,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('events_list') }}" aria-controls="#picker-editor" draggable="false">
-                Events list
+                <strong>Events list</strong>
               </a>
             </li>
             <li class="nav-item">
@@ -62,7 +62,7 @@
         <!-- Right elements -->
         {% if current_user.is_authenticated %}
         <div class="d-flex align-items-center">
-          <a href="{{ url_for('profile_page') }}">
+          <a href="{{ url_for('profile_page', username=current_user.username) }}">
             <button type="button" class="btn btn-link px-3 mb-1" aria-controls="#picker-editor">
               {{ current_user.username }}
               <!-- <i class="fas fa-user-edit"></i> -->
