--- a/program/templates/home_page.html
+++ b/program/templates/home_page.html
@@ -20,10 +20,10 @@
                 style=" margin-top: -170px; background: hsla(0, 0%, 100%, 0.7); backdrop-filter: blur(30px); ">
                 <div class="card-body px-4 py-5 px-md-5">
                   <h1 class="display-3 fw-bold ls-tight mb-4"> <span>The best offer on the market</span> <br> <span
-                      class="text-primary">for your business</span> </h1> <a
-                    class="btn   btn-primary btn-lg py-3 px-5 mb-2 mb-md-0 me-md-2" href="#" role="button"
-                    aria-controls="#picker-editor" draggable="false">Get started</a> <a
-                    class="btn   btn-link btn-lg py-3 px-5 mb-2 mb-md-0" data-ripple-color="primary" href="#"
+                      class="text-primary"> to announce your event</span> </h1> <a
+                    class="btn   btn-primary btn-lg py-3 px-5 mb-2 mb-md-0 me-md-2" href="{{url_for('events_list')}}" role="button"
+                    aria-controls="#picker-editor" draggable="false">See events</a> <a
+                    class="btn   btn-link btn-lg py-3 px-5 mb-2 mb-md-0" data-ripple-color="primary" href="{{url_for('FAQ')}}"
                     role="button" aria-controls="#picker-editor" draggable="false">Learn more</a>
                 </div>
               </div>
