--- a/program/templates/profile_page.html
+++ b/program/templates/profile_page.html
@@ -9,8 +9,8 @@
           <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item"><a href="{{ url_for('home_page') }}">Home</a></li>
-              <li class="breadcrumb-item"><a href="#">User</a></li>
-              <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+              <li class="breadcrumb-item" aria-current="page">User Profile</li>
+              <li class="breadcrumb-item active" aria-current="page">{{ this_user.username }}</li>
             </ol>
           </nav>
         </div>
@@ -20,15 +20,14 @@
         <div class="col-lg-4">
           <div class="card mb-4">
             <div class="card-body text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20({{ current_user.id }}).jpg" alt="avatar"
+              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20({{ this_user.id }}).jpg" alt="avatar"
                 class="rounded-circle img-fluid" style="width: 150px;">
-              <h5 class="my-3">{{ current_user.username }}</h5>
-              <p class="text-muted mb-1">Full Stack Developer</p>
-              <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+              <h5 class="my-4">{{ request.view_args['username'] }}</h5>
+              {% if current_user.username == request.view_args['username'] %}
               <div class="d-flex justify-content-center mb-2">
-                <button type="button" class="btn btn-primary">Follow</button>
-                <button type="button" class="btn btn-outline-primary ms-1">Message</button>
+                <button type="button" class="btn btn-danger">Upload photo</button>
               </div>
+              {% endif %}
             </div>
           </div>
           <div class="card mb-4 mb-lg-0">
@@ -75,7 +74,7 @@
                   <p class="mb-0">Email</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{ current_user.email_address }}</p>
+                  <p class="text-muted mb-0">{{ this_user.email_address }}</p>
                 </div>
               </div>
               <hr>
@@ -84,7 +83,7 @@
                   <p class="mb-0">Username</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{ current_user.username }}</p>
+                  <p class="text-muted mb-0">{{ this_user.username }}</p>
                 </div>
               </div>
               <hr>
@@ -108,72 +107,33 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
-              <div class="card mb-4 mb-md-0">
+            <div class="col-lg-12">
+              <div class="card mb-4">
                 <div class="card-body">
-                  <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
-                  </p>
-                  <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                      aria-valuemin="0" aria-valuemax="100"></div>
+                  <p><h4 class="text-center">My events:</h4></p>
+                  <hr>
+                  {% for event in my_events %}
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <p class="fw-bold">{{ event.event_name }}</p>
+                    </div>
+                    {% if this_user.id == current_user.id %}
+                    <div class="col-sm-2">
+                      <a href="">
+                        <button type="button" class="btn btn-danger btn-rounded" data-mdb-ripple-color="dark">Edit</button>
+                      </a>
+                    </div>
+                    {% endif %}
+                    <div class="col-sm-2">
+                      <a href="{{ url_for('event_page', event_id=event.id) }}">
+                        <button type="button" class="btn btn-outline-primary btn-rounded" data-mdb-ripple-color="dark">View</button>
+                      </a>
+                    </div>
                   </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                  <div class="progress rounded mb-2" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <hr>
+                  {% endfor %}
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card mb-4 mb-md-0">
-                <div class="card-body">
-                  <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
-                  </p>
-                  <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                  <div class="progress rounded" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                  <div class="progress rounded mb-2" style="height: 5px;">
-                    <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
