--- a/program/templates/register.html
+++ b/program/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <body class="text-center">
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
 
 
 <!-- Pills content -->
