--- a/program/templates/base.html
+++ b/program/templates/base.html
@@ -41,7 +41,7 @@
           <!-- Left links -->
           <ul class="navbar-nav me-auto mb-2 ms-2 ps-1 ms-lg-0 ps-lg-0 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('home_page') }}" aria-controls="#picker-editor"
+              <a class="nav-link" href="{{ url_for('index') }}" aria-controls="#picker-editor"
                 draggable="false">Home</a>
             </li>
             <li class="nav-item">
@@ -55,6 +55,13 @@
                 <i class="fas fa-plus ms-2"></i>
               </a>
             </li>
+            {% if current_user.is_authenticated and current_user.isAdmin == True %}
+            <li class="nav-item">
+              <a class="nav-link text-danger" href="{{ url_for('admin_page') }}" aria-controls="#picker-editor" draggable="false">
+                Admin panel
+              </a>
+            </li>
+            {% endif %}
           </ul>
           <!-- Left links -->
         </div>
