--- a/program/templates/home_page.html
+++ b/program/templates/home_page.html
@@ -73,17 +73,30 @@
         <section draggable="false" class="container pt-5" data-v-271253ee="">
           <section class="mb-10 text-center">
             <div class="p-5">
-              <h2 class="my-5 display-5 fw-bold ls-tight"> <span>Let's stay in touch</span> <br> <span
-                  class="text-primary">Join our social media</span> </h2> <!-- Facebook --> <a
-                class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #3b5998" href="#!" role="button">
-                <i class="fab fa-facebook-f me-2" aria-controls="#picker-editor"></i> <span>Facebook</span> </a>
-              <!-- Twitter --> <a class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #55acee"
-                href="#!" role="button"> <i class="fab fa-twitter me-2" aria-controls="#picker-editor"></i>
-                <span>Twitter</span> </a> <!-- Google --> <a class="btn btn-primary btn-lg me-md-2 mb-3"
-                style="background-color: #ed302f" href="#!" role="button"> <i class="fab fa-youtube me-2"
-                  aria-controls="#picker-editor"></i> <span>YouTube</span> </a> <!-- Instagram --> <a
-                class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #ac2bac" href="#!" role="button">
-                <i class="fab fa-instagram me-2" aria-controls="#picker-editor"></i> <span>Instagram</span> </a>
+              <h2 class="my-5 display-5 fw-bold ls-tight">
+                <span>Let's stay in touch</span><br> 
+                <span class="text-primary">Join our social media</span>
+              </h2> 
+              <!-- Github --> 
+              <a class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #333333" href="https://github.com/BartekAndree" role="button" target="_blank">
+                <i class="fab fa-github me-2" aria-controls="#picker-editor"></i> 
+                <span>Github</span> 
+              </a>
+              <!-- LinkedIn --> 
+              <a class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #0082ca" href="https://www.linkedin.com/in/bartlomiejandree/" role="button" target="_blank">
+                <i class="fab fa-linkedin-in me-2" aria-controls="#picker-editor"></i>
+                <span>LinkedIn</span>
+              </a> 
+              <!-- Google --> 
+              <a class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #55acee" href="#!" role="button"> 
+                <i class="fab fa-twitter me-2" aria-controls="#picker-editor"></i> 
+                <span>Twitter</span> 
+              </a> 
+              <!-- Instagram --> 
+              <a class="btn btn-primary btn-lg me-md-2 mb-3" style="background-color: #ac2bac" href="#!" role="button">
+                <i class="fab fa-instagram me-2" aria-controls="#picker-editor"></i> 
+                <span>Instagram</span> 
+              </a>
             </div>
           </section>
         </section>
